WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222797
[GTK] Clang warnings in MiniBrowser build
https://bugs.webkit.org/show_bug.cgi?id=222797
Summary
[GTK] Clang warnings in MiniBrowser build
Philippe Normand
Reported
2021-03-05 04:05:41 PST
[19/73] Building C object Tools/MiniBrowser/gtk/CMakeFiles/MiniBrowser.dir/BrowserCellRendererVariant.c.o ../../Tools/MiniBrowser/gtk/BrowserCellRendererVariant.c:296:6: warning: expression result unused [-Wunused-value] ((__typeof__ (renderer->toggleRenderer)) (g_object_ref_sink) (renderer->toggleRenderer)); ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Tools/MiniBrowser/gtk/BrowserCellRendererVariant.c:302:6: warning: expression result unused [-Wunused-value] ((__typeof__ (renderer->textRenderer)) (g_object_ref_sink) (renderer->textRenderer)); ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 2 warnings generated. [21/73] Building C object Tools/MiniBrowser/gtk/CMakeFiles/MiniBrowser.dir/BrowserTab.c.o ../../Tools/MiniBrowser/gtk/BrowserTab.c:432:6: warning: expression result unused [-Wunused-value] ((__typeof__ (request)) (g_object_ref) (request)); ^ ~~~~~~~~~~~~~~~~~~~~~~~~ 1 warning generated.
Attachments
Patch
(2.72 KB, patch)
2021-03-05 04:07 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-03-05 04:07:35 PST
Created
attachment 422361
[details]
Patch
EWS
Comment 2
2021-03-05 05:15:31 PST
Committed
r273963
: <
https://commits.webkit.org/r273963
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422361
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug