[GTK] Clang warnings in MiniBrowser build https://bugs.webkit.org/show_bug.cgi?id=222797

Patch by Philippe Normand <pnormand@igalia.com> on 2021-03-05
Reviewed by Carlos Garcia Campos.

Fix unused-value warnings.

* MiniBrowser/gtk/BrowserCellRendererVariant.c:
(browser_cell_renderer_variant_init):
* MiniBrowser/gtk/BrowserTab.c:
(runColorChooserCallback):

Canonical link: https://commits.webkit.org/234911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273963 268f45cc-cd09-0410-ab3c-d52691b4dbfc